# nationstates_api

./: Cargo.toml  LICENSE  README.md
src/: census.rs  client.rs  error.rs  lib.rs  nation.rs  query.rs  request.rs
src/nation/: serde.rs
