[package]
name = "nationstates_api"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
[dependencies]
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.22", features = ["serde"] }
tokio = {version = "1", features = ["time"]}
lazy_static = "1"
bytes = "1"
thiserror = "1"
futures = "0.3"
reqwest = {version = "0.11"}